--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <header class="heading">
     <div class="container">
       <div class="navigation">
-        <a class="nav-brand" href="#">Insure</a>
+        <div>
+          <a class="nav-brand" href="#">Insure</a>
+        </div>
+        
         <!-- hambuger menu -->
         <div class="menu-bars">
           <div class="bars-wrapper" onclick="toggler()">
@@ -35,7 +38,7 @@
     </div>
     
       <!-- navigation bar -->
-      <ul class="nav-bar">
+    <ul class="nav-bar">
         <li class="nav-item"><a href="#" class="nav-link">How we work</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Account</a></li>
