--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
   <header class="heading">
     <div class="container">
       <div class="navigation">
-        <div>
+        <div class="brand">
           <a class="nav-brand" href="#">Insure</a>
         </div>
-        
-        
       </div>  
     </div>
     <!-- hambuger menu -->
